# semantic-id-recsys

./: .coverage  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  demo.html  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
artifacts/rqvae/: config.json  semantic_ids.parquet
artifacts/sasrec/: config.json
data/: download.py  preprocess.py
infra/: docker-compose.yml
offline/: evaluate.py  pipeline.py  precompute.py
offline/ann/: build.py
offline/embeddings/: generate.py
offline/ranking/: model.py  train.py
offline/rqvae/: model.py  train.py
offline/sasrec/: dataset.py  model.py  train.py
serving/: inference.py  intent.py  intent_cache.py  intent_retrieval.py  metrics.py  models.py  retrieval.py
serving/api/: main.py  routes.py  state.py
serving/store/: redis_client.py
tests/: conftest.py  test_api.py  test_cold_start.py  test_inference.py  test_redis_store.py  test_rqvae.py
tests/load/: locustfile.py  report.html  results_stats.csv  results_stats_history.csv
