[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recsys-mlops"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Data
    "datasets>=2.20",
    "pandas>=2.2",
    "tqdm>=4.66",
    # Embeddings
    "sentence-transformers>=3.0",
    # ML
    "torch>=2.3",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    # Experiment tracking
    "mlflow>=2.14",
    # Pipeline orchestration
    "prefect>=3.0",
    # Serving
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "redis>=5.0",
    "pydantic>=2.7",
    # ANN index
    "faiss-cpu>=1.8.0",
    # Utilities
    "python-dotenv>=1.0",
    "rich>=13.7",
    "typer>=0.12",
    # Monitoring
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "ipykernel", "matplotlib", "seaborn",
    # Linting
    "ruff>=0.4",
    # Testing
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "fakeredis>=2.23",
    # Load testing
    "locust>=2.29",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "offline*", "serving*"]
